# slashook

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: attr_parser.rs  converter.rs  lib.rs
src/: lib.rs
src/commands/: handler.rs  mod.rs  responder.rs
src/events/: handler.rs  mod.rs  responder.rs
src/internal_utils/: cdn.rs  in_case_of_discord_fuckups.rs  mod.rs
src/rest/: mod.rs
src/structs/: applications.rs  channels.rs  components.rs  embeds.rs  emojis.rs  events.rs  guilds.rs  interactions.rs  invites.rs  members.rs  messages.rs  mod.rs  monetization.rs  permissions.rs  polls.rs  roles.rs  stickers.rs  users.rs  utils.rs
src/webhook/: mod.rs  multipart.rs  signature_headers.rs
