[package]
name = "slashook"
description = "A webhook-based Discord slash command library"
keywords = ["discord", "webhook", "slash-commands"]
categories = ["api-bindings"]
version = "0.3.0"
edition = "2021"
authors = ["Tonkku"]
repository = "https://github.com/tonkku107/slashook"
license = "MIT OR Apache-2.0"

[dependencies]
slashook-macros = { version = "=0.3.0", path = "./macros" }
rocket = "=0.5.0-rc.3"
serde = "^1.0.159"
serde_json = "^1.0.95"
serde_repr = "^0.1.12"
bitflags = "^1.3.2"
reqwest = { version = "^0.11.16", features = ["json", "multipart"] }
ring = "^0.16.20"
hex = "^0.4.3"
chrono = { version = "^0.4.24", features = ["serde"] }
thiserror = "^1.0.40"
anyhow = "^1.0.70"
common-multipart-rfc7578 = "^0.6.0"
tokio-util = { version = "^0.7.7", features = ["io"] }
