[package]
name = "slashook"
description = "A webhook-based Discord slash command library"
keywords = ["discord", "webhook", "slash-commands"]
categories = ["api-bindings"]
version = "0.4.0"
edition = "2024"
authors = ["Tonkku"]
repository = "https://github.com/tonkku107/slashook"
license = "MIT OR Apache-2.0"

[dependencies]
slashook-macros = { version = "=0.4.0", path = "./macros" }
rocket = "^0.5.1"
serde = "^1.0.219"
serde_json = "^1.0.140"
serde_repr = "^0.1.20"
bitflags = "^2.9.0"
reqwest = { version = "^0.12.15", features = ["json", "multipart"] }
ring = "^0.17.14"
hex = "^0.4.3"
chrono = { version = "^0.4.40", features = ["serde"] }
thiserror = "^2.0.12"
anyhow = "^1.0.98"
common-multipart-rfc7578 = "^0.7.0"
tokio-util = { version = "^0.7.15", features = ["io"] }
infer = "^0.19.0"
base64 = "^0.22.1"
