[package]
name = "slashook"
description = "A webhook-based Discord slash command library"
keywords = ["discord", "webhook", "slash-commands"]
categories = ["api-bindings"]
version = "0.4.0"
edition = "2021"
authors = ["Tonkku"]
repository = "https://github.com/tonkku107/slashook"
license = "MIT OR Apache-2.0"

[dependencies]
slashook-macros = { version = "=0.4.0", path = "./macros" }
rocket = "^0.5.1"
serde = "^1.0.203"
serde_json = "^1.0.117"
serde_repr = "^0.1.19"
bitflags = "^2.5.0"
reqwest = { version = "^0.12.4", features = ["json", "multipart"] }
ring = "^0.17.8"
hex = "^0.4.3"
chrono = { version = "^0.4.38", features = ["serde"] }
thiserror = "^1.0.61"
anyhow = "^1.0.86"
common-multipart-rfc7578 = "^0.6.0"
tokio-util = { version = "^0.7.11", features = ["io"] }
infer = "^0.19.0"
base64 = "^0.22.1"
