[package]
name = "slashook-macros"
description = "Macros for slashook"
categories = ["development-tools"]
version = "0.3.0"
edition = "2021"
authors = ["Tonkku"]
repository = "https://github.com/tonkku107/slashook"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.109", features = ["full"] }
quote = "^1.0.26"
proc-macro2 = "^1.0.56"
devise = "^0.3.1"
