[package]
name = "slashook-macros"
description = "Macros for slashook"
categories = ["development-tools"]
version = "0.4.0"
edition = "2024"
authors = ["Tonkku"]
repository = "https://github.com/tonkku107/slashook"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0.101", features = ["full"] }
quote = "^1.0.40"
proc-macro2 = "^1.0.95"
devise = "^0.4.1"
